# ChangeLog for media-sound/gsm
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gsm/ChangeLog,v 1.33 2008/03/22 15:37:29 josejx Exp $

  22 Mar 2008; Joseph Jezak <josejx@gentoo.org> gsm-1.0.12-r1.ebuild:
  Marked ppc stable.

  21 Mar 2008; Brent Baude <ranger@gentoo.org> gsm-1.0.12-r1.ebuild:
  stable ppc64, bug 213686

  20 Mar 2008; Raúl Porcel <armin76@gentoo.org> gsm-1.0.12-r1.ebuild:
  alpha/sparc/x86 stable wrt #213686

  20 Mar 2008; Jeroen Roovers <jer@gentoo.org> gsm-1.0.12-r1.ebuild:
  Stable for HPPA (bug #213686).

  01 Jan 2008; Brent Baude <ranger@gentoo.org> gsm-1.0.12-r1.ebuild:
  Marking gsm-1.0.12-r1 ~ppc64 for bug 192736

  26 Dec 2007; Raúl Porcel <armin76@gentoo.org> gsm-1.0.12-r1.ebuild:
  Add ~alpha wrt #192736, thanks to Tobias Klausmann for testing

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> gsm-1.0.12-r1.ebuild:
  Marked ~hppa (bug #192736).

  16 Dec 2007; Alexis Ballier <aballier@gentoo.org> gsm-1.0.12-r1.ebuild:
  add ~x86-fbsd, its fine here

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> gsm-1.0.12-r1.ebuild:
  Marking amd64 stable to get shared library for linking.

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> gsm-1.0.12-r1.ebuild:
  Symlink ../gsm/gsm.h to /usr/include/libgsm/gsm.h so net-im/ekg2 finds it.

*gsm-1.0.12-r1 (15 Dec 2007)

  15 Dec 2007; Samuli Suominen <drac@gentoo.org>
  +files/gsm-1.0.12-shared.patch, +gsm-1.0.12-r1.ebuild:
  Build objects twice, once -fPIC for shared and once for static.

  25 Nov 2007; Brent Baude <ranger@gentoo.org> gsm-1.0.12.ebuild:
  Marking gsm-1.0.12 ppc for bug 199475

  23 Nov 2007; Raúl Porcel <armin76@gentoo.org> gsm-1.0.12.ebuild:
  sparc stable wrt #199475

  21 Nov 2007; Christian Faulhammer <opfer@gentoo.org> gsm-1.0.12.ebuild:
  stable x86, bug 199475

  19 Nov 2007; Samuli Suominen <drac@gentoo.org> gsm-1.0.12.ebuild:
  amd64 stable wrt #199475
