@@ -2,6 +2,6 @@ AUX gsm-1.0.12-64bit.patch 591 RMD160 fe48ec8dce98db335118ae699a2bb8d6d10931bf S
 AUX gsm-1.0.12-memcpy.patch 301 RMD160 21c1e4c83046bff547f2bae1b14758dfeeca4a3b SHA1 fe6d55433de5775ff7ec2f4e5b8e65b1375b0390 SHA256 3d6637db82d739c89cb4127bd28ce9d5b97cee7f27862943952d130a0fb6e9fe
 AUX gsm-1.0.12-shared.patch 3713 RMD160 6d9cd3e0e6eb7354900b990aa6e195cc12e8e733 SHA1 d2e08db4e95fa96661e989b59318e3eca06e01d2 SHA256 30661e6f947e74ce2f1c42452d666e76175e18269490d5adfa695bad3cf4ff47
 DIST gsm-1.0.12.tar.gz 62156 RMD160 c780aa1405f5029aaacf96183577c6720691dd31 SHA1 69c22bdda35871d223affdac09115b6abb0932b1 SHA256 dde4e62e4ce35af29a15d26beca2fc0f98c0219553927453425cda01f16e4de4
-EBUILD gsm-1.0.12-r1.ebuild 1547 RMD160 f577c15ef73b173f4ed7059fffa3cbcc4d135d0a SHA1 33cb244810f82018d8e2c9acfcf01fa16f6e2ec9 SHA256 72a51aa846c630690b20c7478b8f392574ac872772e8f932a6a01ef38bec31cd
-MISC ChangeLog 3706 RMD160 8cbeb801b88db301215f6a4554fe96be12d031b1 SHA1 112aadc36ff95fba6ababbbfc15f16647bafc125 SHA256 e6180901862c9bacb04b9289b84ca0102d824427cb83c2f16ca66e9c5b0d0817
+EBUILD gsm-1.0.12-r1.ebuild 1585 RMD160 cf15c506027a3fec8336b9deeab9c6c6d0346cb4 SHA1 8eca19f9383c8a528fffd02ac094ec098295f257 SHA256 3d2b64068d03c4cb399f1258d2bc50bbf67a2f6517afe1625ef33ed5d135e400
+MISC ChangeLog 3809 RMD160 912875e4c1c60bf407f52e4b517d5b20501c9788 SHA1 21526a0da22de5b7f088978fbd443f3a67057b43 SHA256 f83dfaec397a9b4773718a1c66e0535a056fb6b8393322b789ba7888931ff7c2
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
