@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gsm/gsm-1.0.12-r1.ebuild,v 1.11 2008/03/22 15:37:29 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gsm/gsm-1.0.12-r1.ebuild,v 1.12 2008/05/11 09:01:55 solar Exp $
 
 inherit eutils flag-o-matic multilib toolchain-funcs versionator
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.cs.tu-berlin.de/~jutta/${PN}/${P}.tar.gz"
 
 LICENSE="OSI-Approved"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="~arm alpha amd64 hppa ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE=""
 
 S="${WORKDIR}"/${PN}-"$(replace_version_separator 2 '-pl' )"
@@ -29,7 +29,7 @@ src_compile() {
 	use sparc && append-flags -DUSE_FLOAT_MUL -DFAST
 
 	emake -j1 CCFLAGS="${CFLAGS} -c -DNeedFunctionPrototypes=1" \
-		CC="$(tc-getCC)" || die "emake failed."
+		LD="$(tc-getCC)" AR="$(tc-getAR)" CC="$(tc-getCC)" || die "emake failed."
 }
 
 src_install() {
